<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">KeepIn</string>

    <string name="fragemnt_title_account_name">服務名稱</string>
    <string name="hint_account">Account</string>
    <string name="hint_password">Password</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_remark">Remark</string>
    <string name="hint_search">Service Name</string>

    <string name="generate_uppercase">大寫字母 A - Z</string>
    <string name="generate_lowercase">小寫字母 a - z</string>
    <string name="generate_number">數字 0 - 9</string>
    <string name="generate_other">!@#$%^*()_</string>
    <string name="generate">GENERATE</string>
    <string name="generate_title">密碼產生器</string>
    <string name="generate_title_2">確認使用密碼</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>

    <string name="biometric_title">身份確認</string>
    <string name="biometric_subtitle">請使用生物識別辨識</string>
    <string name="action_use_pin_code">使用 Pin Code</string>
    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_pin_code">set pin code</string>
    <string name="action_save_account">SAVE</string>
    <string name="action_edit_account">EDIT</string>

    <string name="btn_create_password">MAKE</string>
    <string name="btn_copy_password">COPY</string>
    <string name="btn_add_more">新增其他資訊</string>

    <string name="dialog_color_picker_title">選擇顏色</string>
    <string name="dialog_title">提醒</string>
    <string name="dialog_delete_message">你確定要刪除此帳密資料</string>

    <string name="dialog_warning">提醒</string>
    <string name="dialog_backup_empty_message">沒有資料可備份</string>
    <string name="dialog_confirm">知道了</string>

    <string name="bottom_sheet_pin_code_title">Pin Code</string>
    <string name="bottom_sheet_pin_code_message">輸入你的 Pin Code</string>
    <string name="bottom_sheet_pin_setting_code_title">設定你的 Pin Code</string>
    <string name="bottom_sheet_pin_setting_code_message">@string/bottom_sheet_pin_code_message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_no_parameter">請至少填選一則資訊</string>
    <string name="hint_password_length">預設長度: 8</string>
</resources>
