<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckedTextView
        android:id="@+id/checkedtext_upper_case"
        android:layout_width="@dimen/popup_content_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:checkMark="@null"
        android:checked="false"
        android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
        android:drawableEnd="@null"
        android:gravity="center_vertical"
        android:text="@string/generate_uppercase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_generate_title" />

    <CheckedTextView
        android:id="@+id/checkedtext_lower_case"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:checkMark="@null"
        android:checked="false"
        android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
        android:drawableEnd="@null"
        android:gravity="center_vertical"
        android:text="@string/generate_lowercase"
        app:layout_constraintEnd_toEndOf="@+id/checkedtext_upper_case"
        app:layout_constraintStart_toStartOf="@+id/checkedtext_upper_case"
        app:layout_constraintTop_toBottomOf="@+id/checkedtext_upper_case" />

    <CheckedTextView
        android:id="@+id/checkedtext_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:checkMark="@null"
        android:checked="false"
        android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
        android:drawableEnd="@null"
        android:gravity="center_vertical"
        android:text="@string/generate_number"
        app:layout_constraintEnd_toEndOf="@+id/checkedtext_lower_case"
        app:layout_constraintStart_toStartOf="@+id/checkedtext_lower_case"
        app:layout_constraintTop_toBottomOf="@+id/checkedtext_lower_case" />

    <CheckedTextView
        android:id="@+id/checkedtext_other"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:checkMark="@null"
        android:checked="false"
        android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
        android:drawableEnd="@null"
        android:gravity="center_vertical"
        android:text="@string/generate_other"
        app:layout_constraintEnd_toEndOf="@+id/checkedtext_number"
        app:layout_constraintStart_toStartOf="@+id/checkedtext_number"
        app:layout_constraintTop_toBottomOf="@+id/checkedtext_number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="Length"
        app:layout_constraintStart_toStartOf="@+id/checkedtext_other"
        app:layout_constraintTop_toBottomOf="@+id/checkedtext_other" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/hint_password_length"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/checkedtext_other"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_color_picker_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:background="@android:color/transparent"
        android:text="@string/generate"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/text_generate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/generate_title"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/generate_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/popup_content_width"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/pale"
        android:gravity="center"
        android:text="@{viewModel.password}"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_generate_title"
        tools:text="password" />

    <ImageView
        android:id="@+id/image_refresh"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_color_picker_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btn_color_picker_confirm"
        app:layout_constraintTop_toTopOf="@+id/btn_color_picker_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>