<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_account"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_indicator_account" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_password"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="@+id/image_account"
        app:layout_constraintTop_toBottomOf="@+id/image_user_name"
        app:srcCompat="@drawable/icon_indicator_password" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_user_name"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="@+id/image_account"
        app:layout_constraintTop_toBottomOf="@+id/image_account"
        app:srcCompat="@drawable/icon_indicator_username" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_email"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="@+id/image_account"
        app:layout_constraintTop_toBottomOf="@+id/image_password"
        app:srcCompat="@drawable/icon_indicator_email" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_remark"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="@+id/image_account"
        app:layout_constraintTop_toBottomOf="@+id/image_email"
        app:srcCompat="@drawable/icon_indicator_remark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_account"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="80dp"
        app:hintTextAppearance="@style/TextInputHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_account">

        <AutoCompleteTextView
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account"
            android:text="@{accountViewModel.account}"
            android:textColor="@color/edit_text_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="80dp"
        app:hintTextAppearance="@style/TextInputHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_password">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:text="@{accountViewModel.password}"
            android:textColor="@color/edit_text_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_user_name"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="80dp"
        app:hintTextAppearance="@style/TextInputHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_user_name">

        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:text="@{accountViewModel.userName}"
            android:textColor="@color/edit_text_color" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="80dp"
        app:hintTextAppearance="@style/TextInputHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_email">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:text="@{accountViewModel.email}"
            android:textColor="@color/edit_text_color"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_remark"
        android:layout_width="match_parent"
        android:layout_height="56sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="80dp"
        app:hintTextAppearance="@style/TextInputHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_remark">

        <EditText
            android:id="@+id/edit_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_remark"
            android:text="@{accountViewModel.remark}"
            android:textColor="@color/edit_text_color"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_password"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/stroke_green_background"
        android:text="@{accountViewModel.editable ? @string/btn_create_password : @string/btn_copy_password}"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_input_password"/>

</android.support.constraint.ConstraintLayout>